--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
+
 <html>
-    <head><title>Rango</title></head>
+    
+    <head>
+        <title>Rango</title>
+    </head>
 
     <body>
         <div>
@@ -15,6 +19,8 @@
             {% else %}
             <strong>No pages currently in category.</strong>
             {% endif %}
+
+            <a href="/rango/category/{{ category.slug }}/add_page/">Add Page</a> <br />
         {% else %}
             The specified category does not exist.
         {% endif %}
@@ -22,4 +28,5 @@
 
         <a href="/rango/">Index</a>
     </body>
+
 </html>
